<resources>
    <string name="app_name">Debt Reduction Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom">Custom</string>
    <string name="payment">Payment</string>
    <string name="rate">Rate</string>
    <string name="balance">Balance</string>
    <string name="criditer">Criditer</string>
</resources>
